# rbln-model-zoo

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  requirements.txt
cpp/image_classification/: CMakeLists.txt  README.md  categories.h  compile.py  main.cc  main_async.cc  requirements.txt
cpp/object_detection/: CMakeLists.txt  README.md  categories.h  compile.py  main.cc  main_async.cc  requirements.txt
cpp/object_detection/cmake/: argparse.cmake  opencv.cmake
cpp/object_detection/cmake/opencv/: CMakeLists.txt.in
cpp/text_generation/: CMakeLists.txt  compile.py  llama_class_example.cc  llama_class_example.hpp  llama_main.cc  llama_tensor_example.hpp  llama_tensor_op_example.hpp  post_process.py  pre_process.py  requirements.txt
huggingface/: requirements.txt
huggingface/audio-classification/ast/: compile.py  inference.py  requirements.txt
huggingface/depth-estimation/dpt/: inference.py  requirements.txt
huggingface/embedding-retrieval/bge-reranker/: compile.py  inference.py
huggingface/embedding-retrieval/bge-reranker-v2-m3/: compile.py  inference.py
huggingface/embedding-retrieval/e5-base-4k/: inference.py  requirements.txt
huggingface/embedding-retrieval/ko-reranker/: compile.py
huggingface/embedding-retrieval/kr-sbert/: inference.py
huggingface/fill-mask/bert/: compile.py  inference.py
huggingface/fill-mask/securebert/: compile.py  inference.py
huggingface/image-classification/resnet/: compile.py  inference.py
huggingface/image-classification/vit/: compile.py
huggingface/image-to-text/llavanext/: compile.py
huggingface/kandinsky2_2/kandinsky2_2_inpaint/: compile.py  inference.py
huggingface/kandinsky2_2/kandinsky2_2_inpaint_combined/: compile.py  inference.py
huggingface/question-answering/bert/: compile.py  inference.py
huggingface/question-answering/distilbert/: compile.py  inference.py
huggingface/speech-recognition/wav2vec/: compile.py  inference.py  requirements.txt
huggingface/speech-recognition/whisper/: compile.py  inference.py
huggingface/stable-diffusion/stable_diffusion_3_i2i/: compile.py  inference.py
huggingface/stable-diffusion/stable_diffusion_3_inpaint/: compile.py  inference.py
huggingface/stable-diffusion/stable_diffusion_3_t2i/: compile.py  inference.py  requirements.txt
huggingface/stable-diffusion/stable_diffusion_i2i/: compile.py  inference.py
huggingface/text2text-generation/bart/: compile.py  (+1 more)
huggingface/third-party-models/: README.md
pytorch/: requirements.txt
pytorch_dynamo/: requirements.txt
scripts/: report.py
serving/triton/: README.md  check_env.sh  setup.sh
serving/triton_vllm_backend/: README.md  check_env.sh  setup.sh
tensorflow/: requirements.txt
utils/: update_requirements.py
vllm/decoder-only/: llama.py  t5.py
vllm/encoder-decoder/: bart.py  t5.py
vllm/multimodal/: blip2.py  gemma3.py  idefics3.py  llava.py  llava_next.py  pixtral.py  qwen2_5-vl.py  whisper.py
(+729 files in other folders)
